osprey_worker/src/osprey/engine/query_language/tests/test_parse_query_to_validated_ast/test_only_one_statement.txt
error: unexpected Node
--> main.sml:1:39
     |
   1 | Query = A == B or (C == D and F >= 2); Foo = Bar
     |                                        ^ you cannot define additional statements within the query